--- a/frontProject/src/Organims/Sensores/sensores.css
+++ b/frontProject/src/Organims/Sensores/sensores.css
@@ -13,7 +13,7 @@
 }
 
 .container-grafica{
-    width: 70%;
+    width: 50%;
     height: 90vh;
     display: flex;
     justify-content: center;
@@ -21,13 +21,29 @@
 }
 
 .container-info{
-    width: 30%;
+    width: 50%;
     height: 90vh;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
+.distancia{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    background-color: aqua;
+}
+
+.movimiento{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    background-color: blueviolet;
+}
 .title{
     margin-right: 15px;
 }
