--- a/frontProject/src/Organims/Sensores/sensores.css
+++ b/frontProject/src/Organims/Sensores/sensores.css
@@ -1,49 +1,20 @@
-.container-temperatura{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: start;
-    flex-wrap: wrap;
-}
-
-.img-grafica{
-    width: 60%;
-    height: auto;
-}
-
-.container-grafica{
+.Sensores{
     width: 50%;
-    height: 90vh;
+    height: 90%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: cadetblue;
+    border-radius: 400px 5px 400px 5px;
 }
 
-.container-info{
-    width: 50%;
+.container-sensores{
+    width: 100%;
     height: 90vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
 }
 
-.distancia{
+.container-datos{
     width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    background-color: aqua;
-}
-
-.movimiento{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    background-color: blueviolet;
-}
-.title{
-    margin-right: 15px;
+    height: 60%;
 }
