--- a/frontProject/src/Atom/Button/button.css
+++ b/frontProject/src/Atom/Button/button.css
@@ -9,7 +9,7 @@
     font-weight: bold; /* Hace la letra más gruesa */
     display: flex; /* Hace que el contenedor use flexbox */
     justify-content: center; /* Centra el contenido horizontalmente */
-    align-items: center; /* Centra el contenido verticalmente */
+    align-items: center; 
   }
   
   button:hover {
